/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.7/userguide/building_java_projects.html in the Gradle documentation.
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'java-library'
    id 'net.thebugmc.gradle.sonatype-central-portal-publisher' version '1.2.4'
    id 'signing'
}

description = 'JDBC driver for the Wherobots Cloud Spatial SQL API'
group = 'com.wherobots.jdbc'
version = '0.1.4'

repositories {
    mavenCentral()
}

centralPortal {
    username = System.getenv('OSSRH_USERNAME')
    password = System.getenv('OSSRH_PASSWORD')

    pom {
        url = 'https://www.wherobots.com'
        licenses {
            license {
                name = 'The Apache License, Version 2.0'
                url = 'https://www.apache.org/licenses/LICENSE-2.0.txt'
          }
        }
        developers {
            developer {
                name = 'Wherobots Inc.'
                email = 'info@wherobots.com'
            }
        }
        scm {
            connection = 'scm:git:https://github.com/wherobots/wherobots-jdbc-driver'
            url = 'https://github.com/wherobots/wherobots-jdbc-driver'
        }
    }
}

dependencies {
    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation 'org.apache.httpcomponents.core5:httpcore5:5.2.4'
    implementation 'org.apache.commons:commons-lang3:3.4'
    implementation 'org.java-websocket:Java-WebSocket:1.5.6'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-cbor:2.17.1'
    implementation 'org.apache.arrow:arrow-vector:16.1.0'
    implementation 'org.apache.arrow:arrow-compression:16.1.0'
    implementation 'org.apache.arrow:arrow-memory-netty:16.1.0'
    implementation 'io.github.resilience4j:resilience4j-retry:2.2.0'
    implementation 'org.slf4j:slf4j-simple:2.0.13'
    // Test dependencies
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    withSourcesJar()
    withJavadocJar()
}

tasks.named('jar') {
    archiveBaseName.set('wherobots-jdbc-driver')
    manifest {
        attributes('Implementation-Title': rootProject.name,
                   'Implementation-Version': project.version)
    }
}

tasks.withType(Jar) {
}

signing {
    useGpgCmd()
}

test {
    useJUnitPlatform()
}

// Run this task with `./gradlew runSmokeTest -Papikey=<your_api_key>`
task runSmokeTest {
    group = 'SmokeTest'
    doLast {
        tasks.create('runSmokeTestExec', JavaExec) {
            main = 'com.wherobots.db.jdbc.SmokeTest'
            args = ["$apikey"]
            classpath = sourceSets.test.runtimeClasspath
            jvmArgs = ["--add-opens=java.base/java.nio=org.apache.arrow.memory.core,ALL-UNNAMED"]
        }.exec()
    }
}
